# neural_network

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
nn_core/: Cargo.toml
nn_core/src/: cost_function.rs  layer.rs  lib.rs  matrix.rs  neural_network.rs  optimizer.rs  py_bindings.rs
nn_core/src/cost_function/: squared_error.rs
nn_core/src/layer/: activation.rs  fully_connected.rs
nn_core/src/neural_network/: layer.rs
nn_core/src/neural_network/layer/: activation.rs  fully_connected.rs
nn_core/src/optimizer/: cost_function.rs
nn_core/src/optimizer/cost_function/: squared_error.rs
py_examples/: cubic.ipynb  linear.ipynb  linear_function.ipynb  simple_example.ipynb  simple_example.py
py_nn/: Cargo.toml
py_nn/src/: lib.rs  matrix.rs  neural_network.rs  optimizer.rs  pymatrix.rs
py_nn/src/neural_network/: layer.rs
src/: layer.rs  lib.rs  matrix.rs  tensor.rs
