[package]
name = "nn_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
rand = "0.8.4"
pyo3 = { version = "0.15", features = ["extension-module"] }

[dev-dependencies]
maturin = "0.12"