[package]
name = "py_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn_core = { path = "../nn_core" }

[lib]
crate-type = ["cdylib"]
pyo3 = { version = "0.21", features = ["extension-module"] }

[build-dependencies]
maturin = "1.5"