[package]
name = "py_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn_core = { path = "../nn_core" }
pyo3 = { version = "0.21" }

[features]
extension-module = ["pyo3/extension-module"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
maturin = "1.5"